--- a/index.html
+++ b/index.html
@@ -371,6 +371,25 @@
   exportDeckToTextarea(DEFAULT_DECK);
   document.getElementById('aiToggle').innerText = state.ai? 'Opponent: AI ON' : 'Opponent: AI OFF';
   newGame();
+
+  // Keep history of last 5 battle log entries
+const battleHistory = [];
+
+function appendBattle(text){
+  const el = document.getElementById('battleLog');
+  const timestamped = (new Date()).toLocaleTimeString() + ' — ' + text;
+
+  // Add new entry to front
+  battleHistory.unshift(timestamped);
+
+  // Keep only 5 most recent entries
+  if(battleHistory.length > 5){
+    battleHistory.pop();
+  }
+
+  // Update HTML to show only last 5 entries
+  el.innerHTML = battleHistory.join('<br>');
+}
   </script>
 </body>
 </html>
